--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -145,13 +145,9 @@ jobs:
                 submodules: true
           - name: Install Dependencies
             run: brew install ccache llvm@21
-          - name: Get homebrew prefix
-            id: brew-prefix
-            run: echo "prefix=$(brew --prefix)" >> $GITHUB_OUTPUT
           - name: Build macOS binary
-            run: ./platforms/macos/build.sh
+            run: LLVM_CONFIG="$(brew --prefix)/opt/llvm@21/bin/llvm-config" ./platforms/macos/build.sh
             env:
-              LLVM_CONFIG: ${{ steps.brew-prefix.outputs.prefix }}/opt/llvm@21/bin/llvm-config
               NOSTRIP: 1
           - uses: actions/upload-artifact@v6
             with:
