--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -231,7 +231,7 @@ jobs:
                 ./gradlew assembleRelease
           - uses: upup-company/apksigner-android@v1
             id: sign_apk
-            if: ${{ secrets.ANDROID_KEYSTORE != '' }}
+            if: ${{ secrets.ANDROID_KEYSTORE }}
             with:
               releaseDirectory: ${{ matrix.directory }}/app/build/outputs/apk/release
               signingKeyBase64: ${{ secrets.ANDROID_KEYSTORE }}
@@ -240,10 +240,10 @@ jobs:
             env:
               BUILD_TOOLS_VERSION: 33.0.1
           - name: Rename APK
-            if: ${{ secrets.ANDROID_KEYSTORE != '' }}
+            if: ${{ secrets.ANDROID_KEYSTORE }}
             run: mv ${{ steps.sign_apk.outputs.signedReleaseFile }} ReMCPE.apk
           - name: Rename APK
-            if: ${{ secrets.ANDROID_KEYSTORE == '' }}
+            if: ${{ !secrets.ANDROID_KEYSTORE }}
             run: mv ${{ matrix.directory }}/app/build/outputs/apk/release/app-release-unsigned.apk ReMCPE.apk
           - uses: actions/upload-artifact@v6
             with:
