i do not like wrapped if statements
i do not like them here or there
i do not like them anywhere

--- a/platforms/windows/projects/World/World.vcxproj.filters
+++ b/platforms/windows/projects/World/World.vcxproj.filters
@@ -524,6 +524,9 @@
     <ClCompile Include="$(MC_ROOT)\source\world\entity\MobFactory.cpp">
       <Filter>Source Files\Entity</Filter>
     </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\entity\MobSpawner.cpp">
+      <Filter>Source Files\Entity</Filter>
+    </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\world\phys\Vec2.cpp">
       <Filter>Source Files\Phys</Filter>
     </ClCompile>
