--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -353,6 +353,7 @@ add_library(reminecraftpe-core STATIC
     world/item/ItemStack.cpp
     world/item/RocketItem.cpp
     world/item/Item.cpp
+    world/item/FoodItem.cpp
     world/item/DyePowderItem.cpp
     world/item/ToolItem.cpp
     world/item/WeaponItem.cpp
