--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -241,6 +241,12 @@
     <ClInclude Include="$(MC_ROOT)\source\client\resources\ResourcePackManifest.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\resources\ResourcePackRepository.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\CraftingScreen.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\gui\AreaNavigation.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\gui\components\ConsoleScrollRenderer.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\gui\components\TickBox.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\gui\screens\ConsoleSettingsScreen.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\gui\screens\PanelScreen.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\gui\VerticalLayout.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -401,6 +407,13 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SliderButton.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SwitchButton.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SwitchValuesButton.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\gui\AreaNavigation.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\gui\components\ConsoleScrollRenderer.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\gui\components\TickBox.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\gui\screens\ConsoleSettingsScreen.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\gui\screens\ConsoleSettingsScreen.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\gui\screens\PanelScreen.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\gui\VerticalLayout.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
