--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -355,6 +355,7 @@ add_library(reminecraftpe-core STATIC
     world/item/RocketItem.cpp
     world/item/Item.cpp
     world/item/FoodItem.cpp
+    world/item/ArmorItem.cpp
     world/item/DyePowderItem.cpp
     world/item/ToolItem.cpp
     world/item/WeaponItem.cpp
