--- a/game/assets/.gitignore
+++ b/game/assets/.gitignore
@@ -17,7 +17,7 @@
 /gui/startmenu/sm_multi.png
 /gui/startmenu/sm_options.png
 /gui/startmenu/sm_play.png
-/consolegui
+/gui/console
 /item/camera.png
 /misc/foliagecolor.png
 /misc/grasscolor.png
