--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -241,12 +241,13 @@
     <ClInclude Include="$(MC_ROOT)\source\client\resources\ResourcePackManifest.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\resources\ResourcePackRepository.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\CraftingScreen.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\gui\AreaNavigation.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\gui\components\ConsoleScrollRenderer.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\gui\components\TickBox.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\gui\screens\ConsoleSettingsScreen.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\gui\screens\PanelScreen.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\gui\VerticalLayout.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\AreaNavigation.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\components\ConsoleScrollRenderer.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\components\TickBox.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleSettingsScreen.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\PanelScreen.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\VerticalLayout.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\PlayGameScreen.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -407,13 +408,13 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SliderButton.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SwitchButton.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SwitchValuesButton.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\gui\AreaNavigation.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\gui\components\ConsoleScrollRenderer.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\gui\components\TickBox.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\gui\screens\ConsoleSettingsScreen.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\gui\screens\ConsoleSettingsScreen.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\gui\screens\PanelScreen.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\gui\VerticalLayout.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\AreaNavigation.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\components\ConsoleScrollRenderer.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\components\TickBox.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleSettingsScreen.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\PanelScreen.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\VerticalLayout.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\PlayGameScreen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
