-Added splashes manager, now the splashes will be read from `title/splashes.txt` -Added Console Main screen, replacing the Start Game screen with Console UI Theme -Added Console Pause screen, replacing the ´Pause screen with Console UI Theme -Added Console Create World Screen -Fixed logo rendering not updating when changing the UI Mode -Fixed some artifacts with Console UI scaling in 1080p -Fixed Vertical Layout doing cyclic movement sometimes when trying to scroll down -Fixed Vertical Layout scroll positioning

--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -249,6 +249,13 @@
     <ClInclude Include="$(MC_ROOT)\source\client\gui\VerticalLayout.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\PlayGameScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\app\VirtualKeyboard.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleCreateWorldScreen.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleMainScreen.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsolePauseScreen.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleProgressScreen.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ScreenChooser.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\resources\LoadingTipManager.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\resources\SplashManager.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -416,6 +423,13 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\PanelScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\VerticalLayout.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\PlayGameScreen.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleCreateWorldScreen.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleMainScreen.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsolePauseScreen.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleProgressScreen.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ScreenChooser.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\resources\LoadingTipManager.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\resources\SplashManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
