--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -240,6 +240,7 @@
     <ClInclude Include="$(MC_ROOT)\source\client\resources\ResourcePackRepository.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\CraftingScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\app\VirtualKeyboard.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\renderer\VisibilityExtimator.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -398,6 +399,7 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SliderButton.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SwitchButton.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SwitchValuesButton.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\renderer\VisibilityExtimator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
