--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -242,18 +242,20 @@
     <ClInclude Include="$(MC_ROOT)\source\client\resources\ResourcePackRepository.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\CraftingScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\AreaNavigation.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\components\ConsoleScrollRenderer.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\components\ScrollRenderer_Console.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\components\TickBox.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleSettingsScreen.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\ScreenChooser_Console.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\ClassicCraftingScreen_Console.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\OptionsScreen_Console.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\PanelScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\VerticalLayout.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\PlayGameScreen.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\gui\screens\SelectWorldScreen_Console.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\app\VirtualKeyboard.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleCreateWorldScreen.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleMainScreen.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsolePauseScreen.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleProgressScreen.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ScreenChooser.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\CreateWorldScreen_Console.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen_Console.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\PauseScreen_Console.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ProgressScreen_Console.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\ScreenChooser.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\resources\LoadingTipManager.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\resources\SplashManager.hpp" />
   </ItemGroup>
@@ -417,17 +419,19 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SwitchButton.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\SwitchValuesButton.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\AreaNavigation.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\components\ConsoleScrollRenderer.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\components\ScrollRenderer_Console.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\TickBox.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleSettingsScreen.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\ScreenChooser_Console.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\inventory\ClassicCraftingScreen_Console.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\OptionsScreen_Console.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\PanelScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\VerticalLayout.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\PlayGameScreen.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleCreateWorldScreen.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleMainScreen.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsolePauseScreen.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleProgressScreen.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ScreenChooser.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\gui\screens\SelectWorldScreen_Console.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\CreateWorldScreen_Console.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen_Console.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\PauseScreen_Console.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ProgressScreen_Console.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\ScreenChooser.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\resources\LoadingTipManager.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\resources\SplashManager.cpp" />
   </ItemGroup>
