--- a/platforms/windows/projects/Client/Client.vcxproj.filters
+++ b/platforms/windows/projects/Client/Client.vcxproj.filters
@@ -635,41 +635,47 @@
     <ClInclude Include="$(MC_ROOT)\source\client\gui\AreaNavigation.hpp">
       <Filter>Header Files\GUI\Screens</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\components\ConsoleScrollRenderer.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\components\ScrollRenderer_Console.hpp">
       <Filter>Header Files\GUI\Components</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\gui\components\TickBox.hpp">
       <Filter>Header Files\GUI\Components</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleSettingsScreen.hpp">
-      <Filter>Header Files\GUI\Screens</Filter>
-    </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\app\VirtualKeyboard.hpp">
       <Filter>Header Files\App</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\PlayGameScreen.hpp">
+    <ClInclude Include="..\..\..\..\source\client\gui\screens\SelectWorldScreen_Console.hpp">
       <Filter>Header Files\GUI\Screens</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\resources\SplashManager.hpp">
       <Filter>Header Files\Resources</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleMainScreen.hpp">
-      <Filter>Header Files\GUI\Screens</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ScreenChooser.hpp">
-      <Filter>Header Files\GUI\Screens</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleCreateWorldScreen.hpp">
-      <Filter>Header Files\GUI\Screens</Filter>
-    </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\resources\LoadingTipManager.hpp">
       <Filter>Header Files\Resources</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsolePauseScreen.hpp">
-      <Filter>Header Files\GUI\Screens</Filter>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\ScreenChooser.hpp">
+      <Filter>Header Files\GUI</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ConsoleProgressScreen.hpp">
-      <Filter>Header Files\GUI\Screens</Filter>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\ScreenChooser_Console.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\ClassicCraftingScreen_Console.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\OptionsScreen_Console.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\CreateWorldScreen_Console.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen_Console.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\PauseScreen_Console.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\ProgressScreen_Console.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1159,38 +1165,44 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\AreaNavigation.cpp">
       <Filter>Source Files\GUI</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\components\ConsoleScrollRenderer.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\components\ScrollRenderer_Console.cpp">
       <Filter>Source Files\GUI\Components</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\TickBox.cpp">
       <Filter>Source Files\GUI\Components</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleSettingsScreen.cpp">
-      <Filter>Source Files\GUI\Screens</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\PlayGameScreen.cpp">
+    <ClCompile Include="..\..\..\..\source\client\gui\screens\SelectWorldScreen_Console.cpp">
       <Filter>Source Files\GUI\Screens</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\resources\SplashManager.cpp">
       <Filter>Source Files\Resources</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleMainScreen.cpp">
-      <Filter>Source Files\GUI\Screens</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ScreenChooser.cpp">
-      <Filter>Source Files\GUI\Screens</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleCreateWorldScreen.cpp">
-      <Filter>Source Files\GUI\Screens</Filter>
-    </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\resources\LoadingTipManager.cpp">
       <Filter>Source Files\Resources</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsolePauseScreen.cpp">
-      <Filter>Source Files\GUI\Screens</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\ScreenChooser.cpp">
+      <Filter>Source Files\GUI</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ConsoleProgressScreen.cpp">
-      <Filter>Source Files\GUI\Screens</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\ScreenChooser_Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\inventory\ClassicCraftingScreen_Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\OptionsScreen_Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\CreateWorldScreen_Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen_Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\PauseScreen_Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\ProgressScreen_Console.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
